--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "joi": "^17.11.0",
+    "joi-currency-code": "^3.0.2",
     "morgan": "~1.9.1",
     "sqlite3": "^5.1.6"
   }
